[workspace]
members = [
  "arithmetic_slices-413-22-03-03",
  "champagne_tower_799-22-03-03",
  "delete_and_earn_740_22_03_05",
  "count_all_valid_pickup_and_deliveryo_options_1359_22_03_06",
  "merge_two_sorted_lists_21_22_03_08",
  "add_two_numbers_2_22_03_11",
  "rotate_list_61_22_03_12",
  "plus_one_66_22_11_20",
  "balanced_binary_tree_110_22_11_21"
]

